syntax = "proto3";

package proto;
option go_package = "starbit/proto";

// Game service for tick-based updates
service Game {
  // Send a message to the server
  rpc SendMessage (GameMessage) returns (Empty) {}
  // Subscribe to tick updates
  rpc SubscribeToTicks (Empty) returns (stream TickUpdate) {}
}

// Empty message for requests that don't need data
message Empty {}

// Message sent by clients
message GameMessage {
  string content = 1;
}

// Tick update sent by server
message TickUpdate {
  int32 message_count = 1;
} 